--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dva-loading": "^1.0.4",
     "echarts": "^4.1.0",
     "enquire.js": "^2.1.6",
+    "jquery": "^3.5.1",
     "lazysizes": "^4.0.4",
     "masonry-layout": "^4.2.1",
     "object.omit": "^3.0.0",
