--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "echarts": "^4.1.0",
     "enquire.js": "^2.1.6",
     "jquery": "^3.5.1",
+    "jsonwebtoken": "^8.5.1",
     "lazysizes": "^4.0.4",
     "masonry-layout": "^4.2.1",
     "object.omit": "^3.0.0",
