--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "dva-boot-admin",
+  "name": "website-admin",
   "version": "2.0.1",
   "description": "dva-boot-admin",
-  "homepage": "/dva-boot-admin",
+  "homepage": "/",
   "repository": {
     "type": "git",
     "url": "git@github.com:LANIF-UI/dva-boot-admin.git"
