--- a/package.json
+++ b/package.json
@@ -30,15 +30,18 @@
     "jquery": "^3.5.1",
     "jsonwebtoken": "^8.5.1",
     "lazysizes": "^4.0.4",
+    "localStorage": "^1.0.4",
     "masonry-layout": "^4.2.1",
     "object.omit": "^3.0.0",
     "path-to-regexp": "^2.2.1",
     "react": "^16.2.1",
     "react-bmap": "^1.0.121",
+    "react-cookies": "^0.1.1",
     "react-document-title": "^2.0.3",
     "react-dom": "^16.2.1",
     "react-fast-compare": "^2.0.0",
-    "wangeditor": "^3.1.1"
+    "wangeditor": "^3.1.1",
+    "yarn": "^1.22.10"
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.3.0",
